# fastapi_cloud_detection

./: .dockerignore  Dockerfile  app.py  myUNF.py  pyproject.toml  test.py  test_here.py
